# NSTU_Programming

./: .gitignore  NBody.vcxproj  README.md  util.cu
Cuda/: Makefile  kernel.cu  main.cpp  main.cu  oldLab.cu  task11.cpp  task11.cu  task11.h
Lab1/: Lab1.sln  Lab4sem.vcxproj  Lab4sem.vcxproj.filters  List.h  ListMethods.h  main.cpp
Lab2/: BST.h  BSTmethods.h  main.cpp
Lab3/: Tree23.h  TreeTest.h  main.cpp
Lab4/: HashTable.h  PrimeNumbers.h  TableTest.h  main.cpp
MPI/: Makefile  lab4.cpp
OpenCL/: Makefile  kernel.cl  main.cpp
OpenMP/: CMakeLists.txt  Makefile  lab1.c  lab1.cpp
RGZ/: Edge.h  Graph.h  GraphForm.h  Task.h  Tasks.h  Vertex.h  VertexMap.h  main.cpp
UnitTest/: UnitTest.cpp  UnitTest.vcxproj
semester4/AandDS/: README.md
semester4/AandDS/Lab2/: BST.h  TreeTest.h  main.cpp
semester4/AandDS/Lab3/: Tree23.h
semester4/AandDS/Lab4/: PrimeNumbers.h  lab4.zip1
semester4/AandDS/RGZ/: .gitignore  Edge.h  Graph.h  Input.h  Makefile  RGZ.sln  RGZ.vcxproj  RGZ.vcxproj.filters  Task.h  Task1v13.h  Task2v14.h  Tasks.h  VertexMap.h  main.cpp
semester4/ComputerGraphicsRGZ/: NBody.sln  benchmark.cu  nbody.cu  nbody.cuh
semester5/parallel-programming/: README.md
semester5/parallel-programming/Cuda/: Makefile  info.txt
semester5/parallel-programming/MPI/: lab4 info.txt
semester6/web-programming/: assoc_to_select.php  connect_to_db.php  fetch_all.php  index.html  show_db_table.php
semester8/movie-theater-backend/: Dockerfile  Program.cs  appsettings.json  docker-compose.debug.yml  docker-compose.yml  movie-theater-backend.csproj  test.html
(+272 files in other folders)
